[gd_scene load_steps=6 format=3 uid="uid://bvwey5gmh1j6w"]

[ext_resource type="Script" uid="uid://cwf6exjv85myx" path="res://ui.gd" id="1_fyqef"]
[ext_resource type="Texture2D" uid="uid://dhkfrr1oegyfi" path="res://assets/icon_1.png" id="2_27fn8"]
[ext_resource type="Texture2D" uid="uid://7opfna76uj5v" path="res://assets/icon_2.png" id="3_nltto"]
[ext_resource type="Texture2D" uid="uid://feyimrmcr65d" path="res://assets/icon_3.png" id="4_ibotj"]
[ext_resource type="Texture2D" uid="uid://g4i2hv4y3tf1" path="res://assets/icon_4.png" id="5_n5ude"]

[node name="ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fyqef")
metadata/_edit_use_anchors_ = true

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.937255, 0.972549, 0.886275, 1)

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 87.0
grow_horizontal = 2
color = Color(0.121569, 0.12549, 0.160784, 1)

[node name="Button" type="TextureButton" parent="."]
layout_mode = 1
offset_left = 12.0
offset_top = 12.0
offset_right = 74.0
offset_bottom = 74.0
toggle_mode = true
texture_normal = ExtResource("2_27fn8")
texture_pressed = ExtResource("3_nltto")
ignore_texture_size = true
stretch_mode = 5

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchor_left = -0.0642361
anchor_right = -0.0637569
anchor_bottom = 1.0
offset_top = 82.0
offset_right = -0.551998
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.121569, 0.12549, 0.160784, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 59.0
offset_top = 173.0
offset_right = -59.0
offset_bottom = -173.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 33
text = "home"

[node name="Button2" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 33
text = "about"

[node name="Button3" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 33
text = "contact"

[node name="Control2" type="Control" parent="."]
layout_mode = 1
anchor_top = 1.00463
anchor_right = 1.0
anchor_bottom = 1.07716
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="Control2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.121569, 0.12549, 0.160784, 1)

[node name="Button_2" type="TextureButton" parent="Control2"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -101.0
offset_top = -64.0
offset_bottom = 51.0
grow_horizontal = 0
toggle_mode = true
texture_normal = ExtResource("4_ibotj")
texture_pressed = ExtResource("5_n5ude")
ignore_texture_size = true
stretch_mode = 5

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control2/Button_2" to="." method="_on_button_2_pressed"]
